<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="29dp">

    <TextView
        android:id="@+id/Quest"
        android:layout_width="335dp"
        android:layout_height="108dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/QuestStmnt"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/QuestImg"
        android:layout_width="403dp"
        android:layout_height="319dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Quest"
        app:srcCompat="@drawable/seven" />

    <Button
        android:id="@+id/opt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/Opt1"
        app:layout_constraintEnd_toStartOf="@+id/opt2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QuestImg" />

    <Button
        android:id="@+id/opt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Opt7"
        app:layout_constraintBottom_toBottomOf="@+id/opt1"
        app:layout_constraintEnd_toStartOf="@+id/opt3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/opt1"
        app:layout_constraintTop_toBottomOf="@+id/QuestImg"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/opt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Opt5"
        app:layout_constraintBottom_toBottomOf="@+id/opt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/opt2"
        app:layout_constraintTop_toBottomOf="@+id/QuestImg"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/Qnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Q1"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/skip"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/Skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opt1" />

    <TextView
        android:id="@+id/UrScr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Score"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skip" />

    <TextView
        android:id="@+id/Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="12dp"
        android:text="@string/UrScore"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/UrScr"
        app:layout_constraintTop_toBottomOf="@+id/skip" />

</androidx.constraintlayout.widget.ConstraintLayout>